# agentic-dataset-factory

./: .gitignore  .mcp.json  =0.3.0  AGENTS.md  README.md  agent-config.yaml  agent.py  conftest.py  coverage.json  langgraph.json  pyproject.toml
.claude/: CLAUDE.md
.claude/reviews/: TASK-CR-008-review-report.md  TASK-REV-1F3F-review-report.md  TASK-REV-4AA0-review-report.md  TASK-REV-7617-review-report.md  TASK-REV-A1B4-review-report.md  TASK-REV-AD14-report.md  TASK-REV-E2A7-review-report.md  TASK-REV-F5F5-review-report.md  TASK-REV-FRF2-review-report.md  TASK-REV-FRF3-review-report.md  TASK-REV-G4MOE-review-report.md  TASK-REV-G4R1-review-report.md  TASK-REV-G4R2-review-report.md  TASK-REV-R2A1-review-report.md  TASK-REV-TRF10-review-report.md  TASK-REV-TRF11-review-report.md  TASK-REV-TRF12-review-report.md  TASK-REV-TRF4-review-report.md  TASK-REV-TRF5-review-report.md  TASK-REV-TRF6-review-report.md  TASK-REV-TRF7-review-report.md  TASK-REV-TRF8-review-report.md  TASK-REV-TRF9-review-report.md
.claude/rules/: graphiti-knowledge-graph.md
.claude/task-plans/: TASK-AF-001-implementation-plan.md  TASK-AF-002-implementation-plan.md  TASK-AF-003-implementation-plan.md  TASK-AF-004-implementation-plan.md  TASK-AF-005-implementation-plan.md  TASK-AF-006-implementation-plan.md  TASK-AF-007-implementation-plan.md  TASK-AF-008-implementation-plan.md  TASK-AF-009-implementation-plan.md  TASK-AF-010-implementation-plan.md  TASK-DC-002-implementation-plan.md  TASK-DC-003-implementation-plan.md  TASK-DC-004-implementation-plan.md  TASK-DC-005-implementation-plan.md  TASK-EP-001-implementation-plan.md  TASK-EP-002-implementation-plan.md  TASK-EP-004-implementation-plan.md  TASK-EP-005-implementation-plan.md  TASK-EP-007-implementation-plan.md  TASK-EP-008-implementation-plan.md  TASK-EP-009-implementation-plan.md  TASK-EP-010-implementation-plan.md  TASK-GG-002-implementation-plan.md  TASK-GG-003-implementation-plan.md  TASK-GG-004-implementation-plan.md  TASK-GG-005-implementation-plan.md  TASK-ING-002-implementation-plan.md  TASK-ING-003-implementation-plan.md  TASK-ING-004-implementation-plan.md  TASK-ING-006-implementation-plan.md  TASK-ING-007-implementation-plan.md  TASK-LCT-002-implementation-plan.md  TASK-LCT-003-implementation-plan.md  TASK-LCT-005-implementation-plan.md
.guardkit/: bootstrap_state.json  graphiti.yaml
.guardkit/features/: FEAT-5606.yaml  FEAT-5AC9.yaml  FEAT-6A8C.yaml  FEAT-6D0B.yaml  FEAT-945D.yaml  FEAT-F59D.yaml  FEAT-FBBC.yaml
.guardkit/seeding/: .graphiti_seeded.json  .system_seeded.json
agents/: __init__.py  coach.py  model_factory.py  player.py
agents/tests/: test_coach_factory.py  test_model_factory.py  test_player.py
chroma_data/5ead2aa9-5866-4938-8ff4-10c0e7bc3fcd/: index_metadata.pickle
chroma_data/a5608b4a-b335-486b-9001-c248a7170a6e/: index_metadata.pickle
chroma_data_backup/b5d72dbe-7d50-4676-aeb3-bb704fc5fb76/: index_metadata.pickle
config/: __init__.py  coach_verdict.py  loader.py  logging.py  models.py
config/tests/: test_coach_verdict.py  test_loader.py  test_logging.py  test_models.py
docs/: command_history.md  deployment-and-rag-plan.md  feature-plans.md  scratch_notes.md
docs/architecture/: ARCHITECTURE.md  assumptions.yaml  container.md  domain-model.md  system-context.md
docs/deployment/: gb10-rsync-cheatsheet.md  gb10-setup.md
docs/design/: DESIGN.md
docs/learnings/: 2500-run-stall-analysis.md
domain_config/: __init__.py  models.py  parser.py  validators.py
entrypoint/: checkpoint.py  generation_loop.py  output.py  startup.py
ingestion/: __init__.py  __main__.py  chromadb_indexer.py  chunker.py  docling_processor.py  errors.py  goal_reader.py  ingest.py  models.py
output_backup_pre_rerun/: rejected.jsonl
output_gcse_rerun/: rejected.jsonl
prompts/: __init__.py  coach_prompts.py  player_prompts.py
scripts/: clean_training_data.py  run-on-gb10.sh
src/: goal_parser.py
synthesis/: README.md  __init__.py  synthesise.py  templates.py  validator.py
tests/: test_clean_training_data.py  test_coach_factory.py  test_coach_retry_json_reinforcement.py  test_coach_verdict_parser.py  test_decouple_format_retries.py  test_domain_structure.py  test_format_gate_key_validation.py  test_goal_md_consistency.py  test_goal_md_sections_1_to_5.py  test_goal_md_sections_6_to_9.py  test_goal_md_structure.py  test_httpstatuserror_handling.py  test_integration_smoke.py  test_player_factory.py  test_prompt_builders.py  test_pyproject_config.py  test_structured_outputs_fallback.py  test_valueerror_per_target_handler.py
(+760 files in other folders)
