[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dataset-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5",
    "deepagents>=0.4.11",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["synthesis*", "ingestion*", "agents*", "prompts*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["synthesis/tests", "domain_config/tests", "ingestion/tests", "src/tools/tests", "config/tests", "agents/tests", "prompts/tests"]
markers = [
    "seam: seam tests verifying integration contracts between tasks",
    "integration_contract: marks which integration contract is being verified",
    "integration: integration tests exercising full pipeline end-to-end",
    "smoke: fast-running smoke tests for CI (maps to @smoke BDD scenarios)",
]
