[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dataset-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5",
    "deepagents>=0.5.3,<0.6",
    "langchain>=1.2,<2",
    "langchain-core>=1.3,<2",
    "langchain-community>=0.4,<1",
    "langchain-text-splitters>=1.1,<2",
    "langchain-openai>=1.2,<2",
    "langchain-anthropic>=1.4,<2",
    "langgraph>=1.1,<2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24,<1",
    # TASK-OPS-BDDM-5 / FEAT-BDDM: advisory remediation — pytest-bdd present so future
    # @task:-tagged scenarios cannot trigger the runner-without-producer silent bypass.
    "pytest-bdd>=8.1,<9",
    "pytest-cov",
    "ruff",
]
ingestion = [
    "docling>=2.0",
]

[tool.setuptools.packages.find]
include = ["synthesis*", "ingestion*", "agents*", "prompts*", "config*", "entrypoint*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["synthesis/tests", "domain_config/tests", "ingestion/tests", "src/tools/tests", "config/tests", "agents/tests", "prompts/tests", "entrypoint/tests", "tests"]
asyncio_mode = "auto"
markers = [
    "seam: seam tests verifying integration contracts between tasks",
    "integration_contract: marks which integration contract is being verified",
    "integration: integration tests exercising full pipeline end-to-end",
    "smoke: fast-running smoke tests for CI (maps to @smoke BDD scenarios)",
]
